<resources>
    <string name="app_name" translatable="false">QRing</string>
    <string name="permissions_not_granted">Permissions not granted by the user</string>
    <string name="scan">Scan</string>
    <string name="create">Create</string>
    <string name="qr_scanning">Scanning</string>
    <string name="qr_creation">Creation</string>
    <string name="history">History</string>
    <string name="text">Text</string>
    <string name="copied">Copied</string>
    <string name="link">Link</string>
    <string name="open_link">Open link</string>
    <string name="wifi" translatable="false">Wi-Fi</string>
    <string name="ssid" translatable="false">SSID:</string>
    <string name="connect">Connect</string>
    <string name="email" translatable="false">Email</string>
    <string name="send">Send</string>
    <string name="address">Address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_email">Send email…</string>
    <string name="sms" translatable="false">SMS</string>
    <string name="number">Number</string>
    <string name="vcard" translatable="false">vCard</string>
    <string name="add_contact">Add contact</string>
    <string name="person">Person</string>
    <string name="company">Company</string>
    <string name="job">Job</string>
    <string name="website">Website</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="open">Open</string>
    <string name="event">Event</string>
    <string name="when">When</string>
    <string name="what">What</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="at">at</string>
    <string name="format">Format</string>
    <string name="create_own_code">Create your own code</string>
    <string name="next">Next</string>

    <string name="correction">Correction</string>
    <string name="correction_L" translatable="false">L</string>
    <string name="correction_M" translatable="false">M</string>
    <string name="correction_Q" translatable="false">Q</string>
    <string name="correction_H" translatable="false">H</string>

    <string name="correction_level">Correction level</string>
    <string name="about_correction">Error correction level is a level of data encryption when it encoded. Due to anti-jamming coding scanners can read damaged codes.\n\n
    There are four error correction levels:
        \n\t\t●\tL  (Low) Allow restoring of 7% damaged data
        \n\t\t●\tM  (Medium) Allow restoring of 15% damaged data
        \n\t\t●\tQ  (Quartile) Allow restoring of 25% damaged data
        \n\t\t●\tH  (High) Allow restoring of 30% damaged data
        \n\nFor QR codes with a picture, High-level is used
    </string>
    <string name="encryption">Encryption</string>
    <string name="password">Password</string>
    <string name="hidden">Hidden</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="incorrect_latitude">Latitude must be greater than or equal to -90 and less than or equal to 90</string>
    <string name="incorrect_longitude">Latitude must be greater than or equal to -180 and less than or equal to 180</string>

    <!--    fragment_mask   -->
    <string name="mask">Mask</string>
    <string name="no_matter">It doesn\'t matter</string>

    <string name="about_masks">A mask pattern changes which modules are dark and which are light according to a particular rule (formula).

        \n\nThe selected mask does not affect the validity of the code.  It\'s used just for easily code detection by the scanners.
        \nThere are 7 patterns of the mask.

        \n\nIf you\'re not a specialist, choose the «no matter» option</string>
    <string name="qr_created">Your QR Code created successfully</string>
    <string name="share_qr">Share QR Code</string>
    <string name="qr_code_saved_successfully">QR code saved successfully!</string>
    <string name="select_image_with_qr_code">Select an image with QR code</string>
    <string name="qr_code_not_found">QR code not found!</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="clear_all_entered_data">Clear all entered data?</string>

</resources>