<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LayoutResultScan"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.75"
        android:scaleY="0.75"

        android:src="@drawable/email"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gray_800" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressInput"
        style="@style/TextInputLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"

        android:hint="@string/address"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"

            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subjectInput"
        style="@style/TextInputLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"

        android:hint="@string/subject"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressInput">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"

            android:inputType="textEmailSubject"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageInput"
        style="@style/TextInputLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"

        android:hint="@string/message"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectInput">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:imeOptions="actionDone"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
