<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    style="@style/CardResultScan"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LayoutResultScan"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.75"
            android:scaleY="0.75"

            android:src="@drawable/sms"
            android:tint="@color/gray_800"

            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

        <TextView
            android:id="@+id/title"
            style="@style/TitleResultScan"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/event"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <View
            android:id="@+id/titleDivider"
            style="@style/TitleDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"

            />

        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"

            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleDivider">


            <TextView
                android:id="@+id/dateText"
                style="@style/TextResultScan"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/when" />

            <TextView
                android:id="@+id/date"
                style="@style/SubTextResultScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"

                tools:text="1 January 1970 at 00:00" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/summaryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"

            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateLayout">

            <View
                style="@style/BodyDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"

                />

            <TextView
                android:id="@+id/summaryText"
                style="@style/TextResultScan"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:text="@string/what" />

            <TextView
                android:id="@+id/summary"
                style="@style/SubTextResultScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"

                tools:text="Fishing" />

        </LinearLayout>


        <Button
            android:id="@+id/addToCalendar"
            style="@style/ButtonResultScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:layout_marginBottom="10dp"
            android:text="@string/add_to_calendar"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summaryLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>