<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    style="@style/Card"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LayoutResultScan"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.75"
            android:scaleY="0.75"

            android:src="@drawable/sms"
            app:tint="@color/gray_800"

            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

        <TextView
            android:id="@+id/title"
            style="@style/Text.TitleText"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/sms"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <View
            android:id="@+id/titleDivider"
            style="@style/TitleDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"

            />

        <LinearLayout
            android:id="@+id/numberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"

            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleDivider">


            <TextView
                android:id="@+id/numberText"
                style="@style/Text"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/number" />

            <TextView
                android:id="@+id/number"
                style="@style/Text.SubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:autoLink="phone"

                android:linksClickable="true"

                tools:text="+1 234 567 89 01" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/messageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"

            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberLayout">

            <View
                style="@style/BodyDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"

                />

            <TextView
                android:id="@+id/messageText"
                style="@style/Text"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:text="@string/message" />

            <TextView
                android:id="@+id/message"
                style="@style/Text.SubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"

                tools:text="Come to the main building today at 8:00" />

        </LinearLayout>


        <Button
            android:id="@+id/sendSms"
            style="@style/Button.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:layout_marginBottom="10dp"
            android:text="@string/send"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/messageLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>